@@ -15,6 +15,13 @@ IN DEVELOPMENT
       so that a seperate LockableFiles instance can share a lock if it has the
       right token.  (Andrew Bennetts, Robert Collins)
 
+    * The Repository API ``make_working_trees`` is now permitted to return
+      False when ``set_make_working_trees`` is not implemented - previously
+      an unimplemented ``set_make_working_trees`` implied the result True
+      from ``make_working_trees``. This has been changed to accomodate the
+      smart server, where it does not make sense (at this point) to ever
+      make working trees by default. (Robert Collins)
+
   TESTING:
 
     * Added ``bzrlib.strace.strace`` which will strace a single callable and
